0.20 2016-05-24
	- Improved menu using sliders.
	- Improved menu to make prefixes chooseable,
	  even if list can't be filtered.
	- Fixed choosable prefixes in hint menu.
	- Improve pageup/pagedown behaviour in menus.

0.19 2016-04-28
        - Improved datepicker to enter date strings.
	- Improved menus to have fixed length depending
	  on entry list.

0.18 2016-02-29
        - Support for dashes in identifiers.
	- Minor changes to the layout.
	- Simplified configuration file.

0.17 2015-11-13
        - Support a larger template cache.
	- Minor style adjustments.

0.16 2015-06-18
        - Update to new KoralQuery API.
	  WARNING! This version is no longer compatible
	  with old responses of Krill.
	- Introduced new notifications engine.

0.15 2015-05-21
        - Cleanup for GitHub release
	- First realease on GitHub.

0.14 2015-04-15
        - Redesign of JS and Sass assets
	- Introduced RequireJS
	- Introduced VC
	- Improved tutorial
	- Localized client files

0.13 2015-03-10
        - Project name is now "Kalamar"
	- Removed Mr Crabs - introduced Karl
	- Support semantic markup for KWIC
	- Fixed Click-bug in hint-menu
	- Renamed "KorAP" classes to "Kalamar"
	- Support proxy

0.12 2015-01-28
        - Fixed alignment bug

0.11 2014-01-16
        - Fixed paging bug with the async api
        - Disabled Testing feature in tutorial
	- Improved test suite

0.10 2014-12-21
	- Fixed time_exceeded bug
	- Fixed test_port bug for inspection button

0.09 2014-12-03
        - Added new API module

0.08 2014-11-19
        - Added new suggestion module

0.07 2014-11-03
        - Added API-Response view

0.06 2014-09-22
        - Updated certain Notifications and AssetPack plugins
	- Updated pagination plugin

0.05 2014-07-15
        - Improved tutorial support
	- Added Exception mail system

0.04 2014-07-08
        - Fixed template view
   	- Preliminary match view
	- Switched to asset pipeline wth sass
	- Added syntax highlighting to JSON
	- Update to Api 0.1
