@@ -4,6 +4,7 @@
 	  even if list can't be filtered.
 	- Fixed choosable prefixes in hint menu.
 	- Improve pageup/pagedown behaviour in menus.
+	- Fix prefix o support case sensitivity in menus.
 
 0.19 2016-04-28
         - Improved datepicker to enter date strings.
